{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 11,
  "lineage": "abd126ed-63fd-eefa-9349-c201eaec5e6d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d781f1195d737795",
            "domain": "vpc",
            "id": "eipalloc-0d781f1195d737795",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-184-72-51-156.us-west-1.compute.amazonaws.com",
            "public_ip": "184.72.51.156",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:internet-gateway/igw-0527c8dc964a4fe12",
            "id": "igw-0527c8dc964a4fe12",
            "owner_id": "311747045935",
            "tags": {
              "Name": "STG IGW"
            },
            "tags_all": {
              "Name": "STG IGW"
            },
            "vpc_id": "vpc-0a045c7fbaf42bd1a"
          },
          "dependencies": [
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d781f1195d737795",
            "connectivity_type": "public",
            "id": "nat-088957090b6035b9a",
            "network_interface_id": "eni-02e28e12469a72ba4",
            "private_ip": "10.191.1.200",
            "public_ip": "184.72.51.156",
            "subnet_id": "subnet-05b99fea47ebfdc89",
            "tags": {
              "Name": "STG NAT Gateway"
            },
            "tags_all": {
              "Name": "STG NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.publicsubnets",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:route-table/rtb-029f09f32933fce9b",
            "id": "rtb-029f09f32933fce9b",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-088957090b6035b9a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a045c7fbaf42bd1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_subnet.publicsubnets",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:route-table/rtb-0a77c1659e3de237b",
            "id": "rtb-0a77c1659e3de237b",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0527c8dc964a4fe12",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a045c7fbaf42bd1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d0430266b185684",
            "route_table_id": "rtb-029f09f32933fce9b",
            "subnet_id": "subnet-012724d7b7049a29e"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_route_table.PrivateRT",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e52e7bd91979108",
            "route_table_id": "rtb-0a77c1659e3de237b",
            "subnet_id": "subnet-05b99fea47ebfdc89"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.publicsubnets",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:subnet/subnet-012724d7b7049a29e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.191.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012724d7b7049a29e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "STG Private Subnet"
            },
            "tags_all": {
              "Name": "STG Private Subnet"
            },
            "vpc_id": "vpc-0a045c7fbaf42bd1a"
          },
          "dependencies": [
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:subnet/subnet-05b99fea47ebfdc89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.191.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b99fea47ebfdc89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "STG Public Subnet"
            },
            "tags_all": {
              "Name": "STG Public Subnet"
            },
            "vpc_id": "vpc-0a045c7fbaf42bd1a"
          },
          "dependencies": [
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:vpc/vpc-0a045c7fbaf42bd1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.191.0.0/16",
            "default_network_acl_id": "acl-044822297dffac728",
            "default_route_table_id": "rtb-00fc0bdc099fc73f0",
            "default_security_group_id": "sg-07edd6f8a8948cfe5",
            "dhcp_options_id": "dopt-0666e71eb77786b96",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a045c7fbaf42bd1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00fc0bdc099fc73f0",
            "owner_id": "311747045935",
            "tags": {
              "Name": "STG VPC"
            },
            "tags_all": {
              "Name": "STG VPC"
            }
          }
        }
      ]
    }
  ]
}